chore(core): use Stream.toList() and verification that they are not modified (#15)